# wallpaper-changer

./: .gitignore  extension.js  meson.build  metadata.json  prefs.js
schemas/: org.gnome.shell.extensions.my-first-extension.gschema.xml
